...

    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        "Etalase Produk",
                        style = MaterialTheme.typography.titleLarge,
                        fontWeight = FontWeight.Bold
                    )
                },
                navigationIcon = {
                    IconButton(onClick = onNavigateBack) {
...
